# TailscaleDrive

./: .gitignore  Cargo.toml  README.md
TailscaleDrive/: Package.swift  xtool.yml
TailscaleDrive/Sources/BridgeFFI/: dummy.c
TailscaleDrive/Sources/BridgeFFI/include/: bridging-header.h  tailscale-drive.h
TailscaleDrive/Sources/TailscaleDrive/: AppFiles.swift  BridgeFFIImport.swift  ContentView.swift  RendererHandle.swift  SwiftBridgeCore.swift  TailscaleDriveApp.swift  tailscale-drive.swift
TailscaleDrive/rust/: Cargo.toml  build.rs
TailscaleDrive/rust/src/: bridge.rs  lib.rs  renderer.rs  tailscale_client.rs
TailscaleDrive/scripts/: build-rust.sh
src/: app_state.rs  files.rs  main.rs  status.rs  tailscale.rs  ui.rs
