[package]
name = "tailscale-drive"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["staticlib"]

[build-dependencies]
swift-bridge-build = "0.1"

[dependencies]
swift-bridge = "0.1"
egui = { version = "0.33", features = ["serde"] }
wgpu = "28.0.0"
pollster = "0.4.0"
egui_wgpu_backend = { git = "https://github.com/shadowbrok3r/egui_wgpu_backend" }
ureq = { version = "3", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"